# BrewOS

./: .gitignore  Build.sh  CMakeLists.txt  Run.sh  build.sh  debug.sh  startup.nsh  toolchain.cmake
BootPkg/: BootPkg.dec  BootPkg.dsc
BootPkg/Include/: Common.h
BootPkg/Loader/: Loader.c  Loader.inf
BrewOSPkg/: BrewOSPkg.dec  BrewOSPkg.dsc
BrewOSPkg/Include/: Common.h
BrewOSPkg/Loader/: Loader.c  Loader.inf
kernel/: CMakeLists.txt  colors.c  colors.h  cxxabi.cpp  font.c  font.h  graphics.cpp  initialize.c  interrupts.cpp  linkedlist.hpp  main.cpp  screen.c  screen.h  vector.hpp
kernel/arch/: CMakeLists.txt
kernel/arch/api/: definitions.h  graphics.h  process.h
kernel/arch/api/x86_64/: graphics.c  process.c
kernel/arch/x86_64/: entry.asm  gdt.asm  idt.asm  interrupts.asm  interrupts.hpp  linker.lds  memory.cpp  pit.asm  registers.hpp  scheduler.asm  startup_hi.asm  startup_lo.asm  trampoline.asm
kernel/arch/x86_64/include/: registers.hpp  vectors.hpp
kernel/arch/x86_64/src/: entry.asm  gdt.asm  interrupts.asm  scheduler.asm  trampoline.asm
kernel/graphics/: colors.hpp  fonts.hpp  graphics.cpp  graphics.hpp
kernel/include/: colors.hpp  fonts.hpp  graphics.hpp  heap.hpp  interrupts.hpp  linkedlist.hpp  memory.hpp  process.hpp  scheduler.hpp  thread.hpp  vector.hpp
kernel/include/graphics/: colors.hpp  graphics.hpp
kernel/include/x86_64/arch/: cpu.hpp
kernel/memory/: heap.cpp  heap.hpp  memory.cpp
kernel/scheduler/: entry.hpp  process.cpp  process.hpp  scheduler.cpp  scheduler.hpp  thread.cpp  thread.hpp
kernel/src/: cxxabi.cpp  graphics.cpp  heap.cpp  interrupts.cpp  main.cpp  memory.cpp  process.cpp  scheduler.cpp  thread.cpp
loader/: CMakeLists.txt
loader/arch/x86_64/: entry.asm  linker.lds
