cmake_minimum_required(VERSION 3.21)

project(arch ASM_NASM CXX)

file(GLOB_RECURSE ASM_SOURCES "${CMAKE_SYSTEM_PROCESSOR}/*.asm")
file(GLOB_RECURSE CXX_SOURCES "${CMAKE_SYSTEM_PROCESSOR}/*.cpp")

add_library(arch
STATIC
    ${ASM_SOURCES}
    ${CXX_SOURCES}
)

set_target_properties(arch
PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    LINKER_LANGUAGE CXX
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
