project(Arch VERSION 0.1 LANGUAGES ASM_NASM C)

file(GLOB SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_PROCESSOR}/*.asm
    ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_PROCESSOR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/api/${CMAKE_SYSTEM_PROCESSOR}/*.asm
    ${CMAKE_CURRENT_SOURCE_DIR}/api/${CMAKE_SYSTEM_PROCESSOR}/*.c
)

file(GLOB HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_PROCESSOR}/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/api/*.h
)

add_library(${PROJECT_NAME}
    OBJECT
    ${SOURCES}
    ${HEADERS}
)

target_compile_definitions(${PROJECT_NAME}
    PRIVATE
    BREW_${CMAKE_SYSTEM_PROCESSOR}=1
)

target_include_directories(${PROJECT_NAME}
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/api
)

set_target_properties(${PROJECT_NAME}
    PROPERTIES
    C_STANDARD 23
    C_STANDARD_REQUIRED YES
    C_EXTENSIONS NO
)
